# django_starter

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  manage.py  pyproject.toml
apiserver/: urls.py
apiserver/settings/: base.py  django_settings.py
